--- a/index.html
+++ b/index.html
@@ -26,15 +26,14 @@ layout: landing
         <!--        TODO: DONE wiekszy font na cala stronke -->
         <header class="major">
             <h2>Drodzy goście</h2>
-            <p>Wraz z&nbsp;Rodzicami mamy zaszczyt zaprosić Was na&nbsp;swój Ślub,
+            <p>Dziękujemy Wam za obecność w tym wyjątkowym dla nas dniu.
                 <br>
-                który odbędzie się 14&nbsp;czerwca&nbsp;2025 roku o&nbsp;godzinie 16:00 w&nbsp;Sanktuarium Matki&nbsp;Bożej&nbsp;Miłosiernej
-                w&nbsp;Białej&nbsp;Rawskiej.
+               Jeśli macie ochotę powspominać te chwile, dzielimy się z Wami krótkim reportażem z tego wydarzenia.
                 <br>
-                Po ceremonii zapraszamy do&nbsp;wspólnego świętowania.
+                Poniżej znajdziecie album ze zdjęciami i dwa teledyski ślubne, w wersji krótszej i nieco dłuższej.
                 <br>
-                Przyjęcie weselne odbędzie się w&nbsp;Pałacu&nbsp;Chojnata w&nbsp;Woli-Chojnata&nbsp;59.</p>
-            <p><b>Uprzejmie prosimy o&nbsp;potwierdzenie przybycia do dnia 30&nbsp;kwietnia&nbsp;2025&nbsp;roku.</b>
+                Dzięki Wam te wspomnienia są tak wyjątkowe i zostaną z nami na zawsze.</p>
+            <p><b>Już jako mąż i żona, Sandra i Rafał Kozieł.</b>
             </p>
         </header>
         <!--        <ul class="icons major">-->
@@ -51,7 +50,7 @@ layout: landing
     <section id="churchImg"
              class="wrapper style4 img-bg-responsive">
         <div class="inner">
-            <h2>Ślub</h2>
+            <h2>Reportaż fotograficzny</h2>
         </div>
     </section>
 
@@ -61,22 +60,15 @@ layout: landing
             {% include map.html %}
         </div>
         <div class="content py-lg-5 my-lg-5">
-            <h2>Uroczystość zaślubin</h2>
+            <h2>Fotografie</h2>
             <div class="d-flex flex-column gap-2 mb-5">
-                Ślub odbędzie się 14 czerwca 2025 roku o godzinie 16:00 w Sanktuarium Matki Bożej Miłosiernej w Białej
-                Rawskiej.
-                <!--                <b>Sanktuarium Matki&nbsp;Bożej&nbsp;Miłosiernej w&nbsp;Białej&nbsp;Rawskiej</b>-->
+                Poniżej znajdziecie album, który dla Waszej wygody podzielony został na sekcje. Nasze zdjęcia razem z Wami znajdują się w zakładce Goście.
                 <div class="flex-column gap-1 justify-content-between align-self-lg-start align-items-center">
-                    <!--                    TODO: DONE dziwny margines -->
-                    <!--                    TODO: DONE wiekszy font ogolnie na stronce -->
-                    Adres: plac Kościelny 4, 96-230 Biała Rawska
+
                     <div class="d-flex flex-column justify-content-center gap-4 mt-4 flex-md-row">
-                        <a href="https://maps.app.goo.gl/BdDiE9PHvxGX4gJx5"
+                        <a href="https://ritualsfoto.gallery.photo/gallery/sandra-rafal-pchx/"
                            target="_blank"
-                           class="button small">Google maps</a>
-                        <a href="https://www.sanktuariumbialarawska.pl/"
-                           target="_blank"
-                           class="button small">Sanktuarium</a>
+                           class="button small">Album</a>
                     </div>
                 </div>
             </div>
@@ -86,7 +78,7 @@ layout: landing
     <section id="palaceImg"
              class="img-bg-responsive wrapper style4">
         <div class="inner">
-            <h2>Wesele</h2>
+            <h2>Reportaż filmowy</h2>
         </div>
     </section>
 
@@ -95,235 +87,23 @@ layout: landing
             {% include map-palace.html %}
         </div>
         <div class="content py-lg-5 my-lg-5">
-            <h2>Przyjęcie weselne</h2>
+            <h2>Filmy</h2>
             <div class="d-flex flex-column gap-2 mb-5">
-                Po ceremonii zapraszamy do wspólnego świętowania. Przyjęcie weselne odbędzie się w Pałacu Chojnata w
-                Woli-Chojnata 59.
+                W wersji krótkiego teledysku lub w dłuższej formie, zapraszamy do oglądania!
                 <div class="flex-column gap-1 justify-content-between align-self-lg-start align-items-center">
-                    Adres: Wola-Chojnata 59, 96-230 Wola-Chojnata
                     <div class="d-flex flex-column justify-content-center gap-4 mt-4 flex-md-row">
                         <a href="https://maps.app.goo.gl/1T3CPU9SUdqD13UW7"
                            target="_blank"
-                           class="button small">Google maps</a>
+                           class="button small">Teledysk</a>
                         <a href="https://palacchojnata.pl/ "
                            target="_blank"
-                           class="button small">Pałac Chojnata</a>
+                           class="button small">Reportaż</a>
                     </div>
                 </div>
             </div>
         </div>
     </section>
 
-
-    <section id="moneyImg"
-             class="img-bg-responsive wrapper style4">
-        <div class="inner">
-            <h2>Zamiast kwiatów</h2>
-        </div>
-    </section>
-
-</section>
-
-<section id="charity"
-         class="wrapper style1 with-separator special">
-    <div class="inner">
-        <header class="major">
-            <h2>Fundacja</h2>
-            <p>Wspólnie z Wami pragniemy pomóc. Będziemy wdzięczni, jeśli zamiast kwiatów, zdecydujecie się wesprzeć
-                naszą zbiórkę na rzecz Fundacji Dom w Łodzi. Pieniądze będziemy zbierać do puszki podczas składania
-                życzeń.</p>
-            <p>Fundacja „Dom w Łodzi” działa od sierpnia 2006 roku i jest organizacją pożytku publicznego. Powstała po
-                to, aby pomagać tym, którzy tej pomocy potrzebują bardziej niż ktokolwiek inny. Wspiera dzieci, którym
-                los odebrał nie tylko zdrowie, ale i miłość osób najbliższych. Jej celem jest stworzenie domu, w którym
-                najmłodsi zaznają bliskości, miłości i otrzymają szansę na szczęśliwe i zdrowe życie.</p>
-            <a href="https://www.domwlodzi.org/pl/"
-               target="_blank"
-               class="button small mb-3">Więcej o fundacji</a>
-        </header>
-    </div>
-</section>
-
-<section id="accomodation"
-         class="wrapper style1 with-separator special">
-    <div class="inner">
-        <header class="major">
-            <h2>Noclegi</h2>
-            <p><b>Aby odszukać swoje miejsce noclegu skorzystaj z arkusza.</b></p>
-
-            <a href="https://docs.google.com/spreadsheets/d/13dec0vUvAOTG1mRGlv2wZupEPoe6nLv7/edit?usp=sharing&ouid=118388648363003039549&rtpof=true&sd=true"
-               target="_blank"
-               class="button small mb-3">Arkusz noclegów</a>
-
-            <p>Wystarczy wpisać swoje imię lub nazwisko w żółty obszar w komórce E1, a informacja o lokalizacji
-                miejscu zakwaterowania powinna pojawić się w pierwszej kolumnie. Poniżej znajdują się szczegoły i
-                dokładne lokalizacje poszczególnych noclegów.</p>
-
-            <div class="d-flex flex-column gap-2 mb-5">
-                <h3>Miejsca</h3>
-                <div class="d-flex flex-column gap-2 mb-5">
-                    <h4>Pałac Chojnata</h4>
-                    <div class="d-flex flex-column gap-2 mb-5">
-                        Główny budynek pałacu. Po przyjeździe prosimy o kontakt z recepcją w celu ustalenia numeru
-                        pokoju i
-                        odebrania klucza. Zameldowanie możliwe od godziny 14:00 w sobotę, 14.06, wymeldowanie do godziny
-                        13:00 w
-                        niedzielę, 15.06.
-                        <div class="d-flex flex-column gap-2 mb-5">
-                            Adres: Wola-Chojnata 59, 96-230 Wola-Chojnata
-                        </div>
-                        <div class="d-flex flex-column justify-content-center gap-4 mt-4 flex-md-row">
-                            <a href="https://maps.app.goo.gl/1T3CPU9SUdqD13UW7"
-                               target="_blank"
-                               class="button small">Google maps</a>
-                            <a href="https://palacchojnata.pl/ "
-                               target="_blank"
-                               class="button small">Pałac Chojnata</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="d-flex flex-column gap-2 mb-5">
-                    <h4>Willa Parkowa</h4>
-                    <div class="d-flex flex-column gap-2 mb-5">
-                        Budynek przy pałacu, po jego lewej stronie od wejścia. Po przyjeździe prosimy o kontakt z
-                        recepcją w
-                        budynku głównym w celu ustalenia numeru pokoju i odebrania klucza. Zameldowanie możliwe od
-                        godziny
-                        14:00
-                        w sobotę, 14.06, wymeldowanie do godziny 13:00 w niedzielę, 15.06.
-                        <div class="d-flex flex-column gap-2 mb-5">
-                            Adres: Wola-Chojnata 59, 96-230 Wola-Chojnata
-                        </div>
-                        <div class="d-flex flex-column justify-content-center gap-4 mt-4 flex-md-row">
-                            <a href="https://maps.app.goo.gl/1T3CPU9SUdqD13UW7"
-                               target="_blank"
-                               class="button small">Google maps</a>
-                            <a href="https://palacchojnata.pl/ "
-                               target="_blank"
-                               class="button small">Willa Parkowa</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="d-flex flex-column gap-2 mb-5">
-                    <h4>Pałac Biała Rawska</h4>
-                    <div class="d-flex flex-column gap-2 mb-5">
-                        Zabytkowy pałac w centrum miejscowości Biała Rawska, blisko kościoła, w którym odbywa się ślub,
-                        4
-                        kilometry od miejsca wesela. Po przyjeździe prosimy o kontakt z recepcją w celu ustalenia numeru
-                        pokoju
-                        i odebrania klucza. Zameldowanie możliwe od godziny 14:00 w sobotę, 14.06, wymeldowanie do
-                        godziny
-                        12:00
-                        w niedzielę, 15.06. Prosimy o wymeldowanie się przed przybyciem na weselny brunch.
-                        <div class="d-flex flex-column gap-2 mb-5">
-                            Adres: Wojska Polskiego 4, 96-230 Biała Rawska
-                        </div>
-                        <div class="d-flex flex-column justify-content-center gap-4 mt-4 flex-md-row">
-                            <a href="https://maps.app.goo.gl/k5FGMQNTiAdJonb18"
-                               target="_blank"
-                               class="button small">Google maps</a>
-                            <a href="https://www.facebook.com/p/Pa%C5%82ac-Bia%C5%82a-Rawska-100071308547545/?locale=pl_PL"
-                               target="_blank"
-                               class="button small">Pałac Biała Rawska</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="d-flex flex-column gap-2 mb-5">
-                    <h4>Agroturystyka</h4>
-                    <div class="d-flex flex-column gap-2 mb-5">
-                        Agroturystyka Nad Białką w Wólce Lesiewskiej, 10 kilometrów od miejsca wesela. Po przyjeździe
-                        prosimy o
-                        kontakt z recepcją w celu ustalenia numeru pokoju i odebrania klucza. Zameldowanie możliwe od
-                        godziny
-                        14:00 w sobotę, 14.06, wymeldowanie do godziny 12:00 w niedzielę, 15.06. Prosimy o wymeldowanie
-                        się
-                        przed przybyciem na weselny brunch.
-                        <div class="d-flex flex-column gap-2 mb-5">
-                            Adres: Wólka Lesiewska 11, 96-230 Wólka Lesiewska
-                        </div>
-                        <div class="d-flex flex-column justify-content-center gap-4 mt-4 flex-md-row">
-                            <a href="https://maps.app.goo.gl/CPaYtS2Gx5GLknfaA"
-                               target="_blank"
-                               class="button small">Google maps</a>
-                            <a href="https://meteor-turystyka.pl/nadbialka-wolka-lesiewska,wolka-lesiewska.html"
-                               target="_blank"
-                               class="button small">Agroturystyka</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </header>
-    </div>
-</section>
-
-<section id="timePlan"
-         class="wrapper style1 with-separator special">
-    <div class="inner">
-        <header class="major">
-            <h2>Plan</h2>
-            <div class="d-flex flex-column gap-0 mb-1">
-                <h3>Sobota, 14 czerwca</h3>
-                <p><b>14:00</b><br> Możliwość zameldowania w hotelu</p>
-                <p><b>16:00</b><br> Ślub w Kościele w Białej Rawskiej</p>
-                <p><b>17:00</b><br> Czas życzeń od Gości Ślubnych</p>
-                <p><b>17:30</b><br> Powitanie Młodych i wspólna fotografia</p>
-                <p><b>18:00</b><br> Obiad</p>
-                <p><b>19:00</b><br> Czas życzeń od Gości Weselnych</p>
-                <p><b>19:30</b><br> Pierwszy taniec</p>
-                <p><b>20:30</b><br> Kolacja I</p>
-                <p><b>22:00</b><br> Tort</p>
-                <p><b>23:00</b><br> Kolacja II</p>
-                <p><b>00:00</b><br> Oczepiny</p>
-                <p><b>01:30</b><br> Barszczyk</p>
-                <p><b>??:??</b><br> Zakończenie imprezy do ostatniego gościa na parkiecie</p>
-            </div>
-            <div class="d-flex flex-column gap-0 mb-1">
-                <h3>Niedziela, 15 czerwca</h3>
-                <p><b>11:00</b><br> Brunch Weselny w Pałacu Chojnata</p>
-                <p><b>12:00</b><br> Ostatni moment na wymeldowanie</p>
-                <p><b>15:00</b><br> Zakończenie</p>
-                <p><b>I żyli długo i szczęśliwie!</b></p>
-            </div>
-        </header>
-    </div>
-</section>
-
-<section id="contact"
-         class="wrapper style1 special">
-    <div class="inner">
-        <header class="major">
-            <h2>Kontakt</h2>
-            <p></p>
-            <p><b>W dniu uroczystości prosimy nie niepokoić Pary Młodej.</b></p>
-            <p>Zachęcamy do kontaktu z wyznaczonymi osobami,
-                których dane znajdują się poniżej. Dziękujemy!</p>
-
-            <a id="showContactInfo"
-               class="button small">Pokaż dane kontaktowe</a>
-
-            <div id="contactInfo"></div>
-        </header>
-    </div>
-
-    <script>
-        $('#showContactInfo').click(function () {
-            $('#showContactInfo').hide();
-            $('#contactInfo').html(info);
-            $('#contact ul li').each(function () {
-                let text = $(this).text();
-                // let encodedText = rot(11, 5, text);
-                let encodedText = rot(-11, -5, text);
-                $(this).text(encodedText);
-            });
-        });
-        $('#contact').ready(function () {
-            $('#contact ul li').each(function () {
-                let text = $(this).text();
-                // let encodedText = rot(11, 5, text);
-                let encodedText = rot(-11, -5, text);
-                $(this).text(encodedText);
-            });
-        });
-    </script>
 </section>
 
 <section id="footImg"
