--- a/index.html
+++ b/index.html
@@ -92,10 +92,10 @@ layout: landing
                 W wersji krótkiego teledysku lub w dłuższej formie, zapraszamy do oglądania!
                 <div class="flex-column gap-1 justify-content-between align-self-lg-start align-items-center">
                     <div class="d-flex flex-column justify-content-center gap-4 mt-4 flex-md-row">
-                        <a href="https://maps.app.goo.gl/1T3CPU9SUdqD13UW7"
+                        <a href="https://www.dropbox.com/scl/fo/2wx7o5fjflqi9385gkicj/AEGmax4CLa15YvLDFfVVzGU/Short%20story%20Sandra%20i%20Rafa%C5%82.mov?rlkey=hx7va4n2xqx7c4kv03pp90epp&st=s6rednw4&dl=0"
                            target="_blank"
                            class="button small">Teledysk</a>
-                        <a href="https://palacchojnata.pl/ "
+                        <a href="https://www.dropbox.com/scl/fo/2wx7o5fjflqi9385gkicj/AHwWZWTf0cVNtx3K8oFA1nU/Film%20%C5%9Blubny%20Sandra%20i%20Rafa%C5%82.mov?rlkey=hx7va4n2xqx7c4kv03pp90epp&st=7gp4nbep&dl=0"
                            target="_blank"
                            class="button small">Reportaż</a>
                     </div>
