--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ layout: landing
         <!--        </ul>-->
     </div>
     <a href="#one"
-       class="more">Więcej informacji</a>
+       class="more">Wspomnienia</a>
 </section>
 
 <!-- One -->
@@ -50,15 +50,12 @@ layout: landing
     <section id="churchImg"
              class="wrapper style4 img-bg-responsive">
         <div class="inner">
-            <h2>Reportaż fotograficzny</h2>
+            <h2>Reportaż foto</h2>
         </div>
     </section>
 
 
     <section class="spotlight">
-        <div class="image">
-            {% include map.html %}
-        </div>
         <div class="content py-lg-5 my-lg-5">
             <h2>Fotografie</h2>
             <div class="d-flex flex-column gap-2 mb-5">
@@ -83,9 +80,6 @@ layout: landing
     </section>
 
     <section class="spotlight">
-        <div class="image">
-            {% include map-palace.html %}
-        </div>
         <div class="content py-lg-5 my-lg-5">
             <h2>Filmy</h2>
             <div class="d-flex flex-column gap-2 mb-5">
