--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ layout: landing
 
 
     <section class="spotlight">
-        <div class="content py-lg-5 my-lg-5">
+        <div class="inner">
             <h2>Fotografie</h2>
             <div class="d-flex flex-column gap-2 mb-5">
                 Poniżej znajdziecie album, który dla Waszej wygody podzielony został na sekcje. Nasze zdjęcia razem z Wami znajdują się w zakładce Goście.
@@ -80,7 +80,7 @@ layout: landing
     </section>
 
     <section class="spotlight">
-        <div class="content py-lg-5 my-lg-5">
+        <div class="inner">
             <h2>Filmy</h2>
             <div class="d-flex flex-column gap-2 mb-5">
                 W wersji krótkiego teledysku lub w dłuższej formie, zapraszamy do oglądania!
