--- a/index.html
+++ b/index.html
@@ -54,21 +54,15 @@ layout: landing
         </div>
     </section>
 
-
-    <section class="spotlight">
+    <section class="wrapper style1 with-separator special">
         <div class="inner">
-            <h2>Fotografie</h2>
-            <div class="d-flex flex-column gap-2 mb-5">
-                Poniżej znajdziecie album, który dla Waszej wygody podzielony został na sekcje. Nasze zdjęcia razem z Wami znajdują się w zakładce Goście.
-                <div class="flex-column gap-1 justify-content-between align-self-lg-start align-items-center">
-
-                    <div class="d-flex flex-column justify-content-center gap-4 mt-4 flex-md-row">
-                        <a href="https://ritualsfoto.gallery.photo/gallery/sandra-rafal-pchx/"
-                           target="_blank"
-                           class="button small">Album</a>
-                    </div>
-                </div>
-            </div>
+            <header class="major">
+                <h2>Fotografie</h2>
+                <p>Poniżej znajdziecie album, który dla Waszej wygody podzielony został na sekcje. Nasze zdjęcia razem z Wami znajdują się w zakładce Goście.</p>
+                 <a href="https://ritualsfoto.gallery.photo/gallery/sandra-rafal-pchx/"
+                   target="_blank"
+                   class="button small mb-3">Album</a>
+            </header>
         </div>
     </section>
 
@@ -79,22 +73,19 @@ layout: landing
         </div>
     </section>
 
-    <section class="spotlight">
+    <section class="wrapper style1 with-separator special">
         <div class="inner">
-            <h2>Filmy</h2>
-            <div class="d-flex flex-column gap-2 mb-5">
-                W wersji krótkiego teledysku lub w dłuższej formie, zapraszamy do oglądania!
-                <div class="flex-column gap-1 justify-content-between align-self-lg-start align-items-center">
-                    <div class="d-flex flex-column justify-content-center gap-4 mt-4 flex-md-row">
-                        <a href="https://www.dropbox.com/scl/fo/2wx7o5fjflqi9385gkicj/AEGmax4CLa15YvLDFfVVzGU/Short%20story%20Sandra%20i%20Rafa%C5%82.mov?rlkey=hx7va4n2xqx7c4kv03pp90epp&st=s6rednw4&dl=0"
-                           target="_blank"
-                           class="button small">Teledysk</a>
-                        <a href="https://www.dropbox.com/scl/fo/2wx7o5fjflqi9385gkicj/AHwWZWTf0cVNtx3K8oFA1nU/Film%20%C5%9Blubny%20Sandra%20i%20Rafa%C5%82.mov?rlkey=hx7va4n2xqx7c4kv03pp90epp&st=7gp4nbep&dl=0"
-                           target="_blank"
-                           class="button small">Reportaż</a>
-                    </div>
-                </div>
-            </div>
+            <header class="major">
+                <h2>Filmy</h2>
+                <p>W wersji krótkiego teledysku lub w dłuższej formie, zapraszamy do oglądania!
+                </p>
+                <a href="https://www.dropbox.com/scl/fo/2wx7o5fjflqi9385gkicj/AEGmax4CLa15YvLDFfVVzGU/Short%20story%20Sandra%20i%20Rafa%C5%82.mov?rlkey=hx7va4n2xqx7c4kv03pp90epp&st=s6rednw4&dl=0"
+                   target="_blank"
+                   class="button small mb-3">Teledysk</a>
+                <a href="https://www.dropbox.com/scl/fo/2wx7o5fjflqi9385gkicj/AHwWZWTf0cVNtx3K8oFA1nU/Film%20%C5%9Blubny%20Sandra%20i%20Rafa%C5%82.mov?rlkey=hx7va4n2xqx7c4kv03pp90epp&st=7gp4nbep&dl=0"
+                   target="_blank"
+                   class="button small mb-3">Reportaż</a>
+            </header>
         </div>
     </section>
 
